--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LivePhoto</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <a href="">Главная</a>
+      <a href="">Местоположение</a>
+    </nav>
+    <div>
+      <div>
+        <img src="images/slide1.jpg" />
+      </div>
+    </div>
+    <footer>
+      <span>Никульцев Феликс и Герасимова Ярослава</span>
+    </footer>
+  </body>
 </html>
