--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>LivePhoto</title>
   </head>
   <body>
-    <nav>
-      <a href="">Главная</a>
-      <a href="">Местоположение</a>
-    </nav>
-    <div>
-      <div>
-        <img src="images/slide1.jpg" />
+    <div class="container">
+      <nav class="nav">
+        <a class="link" href="">Главная</a>
+        <a class="link" href="">Местоположение</a>
+      </nav>
+      <div class="slider">
+        <div>
+          <img src="images/slide1.jpg" />
+        </div>
       </div>
+      <footer class="footer">
+        <span class="copyright">Никульцев Феликс и Герасимова Ярослава</span>
+      </footer>
     </div>
-    <footer>
-      <span>Никульцев Феликс и Герасимова Ярослава</span>
-    </footer>
   </body>
 </html>
