created second page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="container">
       <nav class="nav">
-        <a class="link" href="">Главная</a>
-        <a class="link" href="">Местоположение</a>
+        <a class="link" href="index.html">Главная</a>
+        <a class="link" href="index2.html">Местоположение</a>
       </nav>
       <div class="slider">
         <div>
