--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <div>
           <img src="images/slide1.jpg" />
         </div>
+        <div class="sider">
+          <h2>Ссылки:</h2>
+          <a href="https://vk.com/felixnikultsev">felixnikultsev</a>
+          <a href="https://vk.com/me_slava">me_slava</a>
+        </div>
       </div>
       <footer class="footer">
         <span class="copyright">Никульцев Феликс и Герасимова Ярослава</span>
