changed link on main page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <nav class="nav">
         <a class="link" href="index.html">Главная</a>
-        <a class="link" href="index2.html">Местоположение</a>
+        <a class="link" href="addition.html">Список задач</a>
       </nav>
       <div class="slider">
         <div>
